# rash

./: .gitignore  CODE_REVIEW.md  Cargo.toml  README.md  index.html  package.json  tsconfig.json  vite.config.ts
crates/rash-codegen/: Cargo.toml
crates/rash-codegen/src/: context.rs  error.rs  generator.rs  lib.rs  traits.rs
crates/rash-codegen/src/adapters/: actix.rs  express.rs  fastapi.rs  gin.rs  mod.rs
crates/rash-codegen/src/emitters/: go_lang.rs  mod.rs  python.rs  rust_lang.rs  typescript.rs
crates/rash-codegen/tests/: integration_codegen.rs
crates/rash-ir/: Cargo.toml
crates/rash-ir/src/: convert.rs  dep_graph.rs  expr.rs  lib.rs  statement.rs  types.rs
crates/rash-openapi/: Cargo.toml
crates/rash-openapi/src/: error.rs  export.rs  import.rs  lib.rs  types.rs
crates/rash-openapi/src/reverse_parse/: detect.rs  express.rs  handler_extract.rs  mod.rs  schema_extract.rs
crates/rash-openapi/tests/: integration_openapi.rs
crates/rash-runtime/: Cargo.toml
crates/rash-runtime/src/: hmu_engine.rs  hmu_types.rs  incremental.rs  lib.rs  log_types.rs  preflight.rs  preflight_checker.rs  process_manager.rs  runtime_detect.rs
crates/rash-runtime/tests/: integration_runtime.rs
crates/rash-spec/: Cargo.toml
crates/rash-spec/src/: index.rs  lib.rs  loader.rs  migration.rs  parser.rs  resolver.rs  schema_def.rs
crates/rash-spec/src/types/: ast.rs  common.rs  config.rs  error.rs  handler.rs  middleware.rs  mod.rs  model.rs  route.rs  schema.rs
crates/rash-valid/: Cargo.toml
crates/rash-valid/src/: lib.rs  validator.rs
crates/rash-valid/src/rules/: cycle_detect.rs  mod.rs  ref_integrity.rs  required_fields.rs  type_consistency.rs  version_check.rs
docs/: README.md  roadmap.md
docs/architecture/: advanced-features.md  ast-dsl.md  codegen.md  overview.md  runtime.md  spec-format.md  tauri-app.md
fixtures/broken/circular-ref/: rash.config.json
fixtures/broken/circular-ref/schemas/: a.schema.json  b.schema.json
fixtures/broken/duplicate-symbol/: rash.config.json
fixtures/broken/duplicate-symbol/schemas/: user-v2.schema.json  user.schema.json
fixtures/broken/invalid-json/: rash.config.json
fixtures/broken/missing-fields/: rash.config.json
fixtures/broken/missing-fields/routes/: bad.route.json
fixtures/broken/missing-ref/: rash.config.json
fixtures/broken/missing-ref/routes/: test.route.json
fixtures/broken/old-version/: rash.config.json
fixtures/golden-user-crud/: rash.config.json
fixtures/golden-user-crud/handlers/: authVerifyToken.handler.json  corsHandleCors.handler.json  createUser.handler.json  deleteUser.handler.json  listUsers.handler.json  updateUser.handler.json  users.handler.json
fixtures/golden-user-crud/middleware/: auth.middleware.json  cors.middleware.json  validate.middleware.json
fixtures/golden-user-crud/models/: post.model.json  profile.model.json  user.model.json
fixtures/golden-user-crud/routes/api/v1/: users.route.json
fixtures/golden-user-crud/routes/api/v1/users/: [id].route.json
fixtures/golden-user-crud/schemas/: user.schema.json
fixtures/minimal/: rash.config.json
fixtures/minimal/handlers/: health.handler.json
fixtures/minimal/routes/: health.route.json
rash-cli/: Cargo.toml
rash-cli/src/: main.rs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: codegen.rs  mod.rs  openapi.rs  project.rs  runtime.rs  spec.rs
src/components/common/: Badge.tsx  Button.tsx  CodeViewer.tsx  ConfirmDialog.tsx  ContextMenu.tsx  DropdownMenu.tsx  EmptyState.tsx  Input.tsx  JsonViewer.tsx  MethodBadge.tsx  Modal.tsx  RefPicker.tsx  SearchInput.tsx  Select.tsx  SpecIcon.tsx  Spinner.tsx  TabPanel.tsx  ToastContainer.tsx  TreeView.tsx
src/components/dialogs/: CreateProjectDialog.tsx  CreateSpecDialog.tsx  ExportDialog.tsx  ImportDialog.tsx
src/components/handler/: AstNodeView.tsx  DomainNodeView.tsx  ExpressionSlot.tsx  HandlerEditor.tsx  NodePalette.tsx  StatementBlock.tsx
src/components/layout/: BottomPanel.tsx  MainPanel.tsx  Sidebar.tsx  SplitPane.tsx  TopBar.tsx  layout.css
src/components/middleware/: MiddlewareEditor.tsx  MiddlewareList.tsx
src/components/model/: ColumnEditor.tsx  IndexEditor.tsx  ModelEditor.tsx  RelationEditor.tsx
src/components/preview/: CodePreview.tsx  LanguageSelector.tsx
src/components/route/: MethodPanel.tsx  ParamEditor.tsx  RequestEditor.tsx  ResponseEditor.tsx  RouteEditor.tsx  RouteExplorer.tsx
src/components/schema/: DefinitionList.tsx  FieldEditor.tsx  SchemaEditor.tsx
src/components/validation/: ErrorList.tsx  ValidationPanel.tsx
src/ipc/: commands.ts  events.ts  invoke.ts  mock.ts  types.ts
src/stores/: editorStore.ts  notificationStore.ts  projectStore.ts  runtimeStore.ts  specStore.ts  uiStore.ts
src/styles/: global.css
src/utils/: ast.ts  autoSave.ts  defaults.ts  keyboard.ts  routeTree.ts
