[package]
name = "rash-runtime"
description = "Rash runtime types: HMU protocol and preflight checks"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
which = "7"
sha2 = "0.10"
tokio = { version = "1", features = ["process", "io-util", "sync", "time", "macros", "rt"] }
rash-spec = { workspace = true }
rash-ir = { workspace = true }
rash-codegen = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }
tokio = { version = "1", features = ["full"] }
