[package]
name = "rash-valid"
description = "Rash spec validation rules"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rash-spec = { workspace = true }
rash-ir = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
insta = { workspace = true }
